--- a/.github/workflows/build-and-push-docker-hub.yml
+++ b/.github/workflows/build-and-push-docker-hub.yml
@@ -1,9 +1,11 @@
 name: Build, Push, Ssh, Pull, Down, Up
 
-on:
-  push:
-    branches:
-      - 'staging'
+# on:
+#   push:
+#     branches:
+#       - 'staging'
+
+on: [push]
 
 jobs:
   build-and-push:
